add_subdirectory(hyperneat)
if(WITH_NN2)
add_subdirectory(neuroEvolution)
add_subdirectory(nslc)
add_subdirectory(nsgc)
add_subdirectory(nipes)
add_subdirectory(bayesopt)
add_subdirectory(random_search)
add_subdirectory(reevaluate_fixedmorphology)
add_subdirectory(pop_morph_nipes)
endif()
add_subdirectory(lc_nsms)
add_subdirectory(friction_estimation)
install(DIRECTORY common DESTINATION include FILES_MATCHING PATTERN "*.hpp" PATTERN "*.h" )

install(DIRECTORY common DESTINATION include FILES_MATCHING PATTERN "*.hpp" PATTERN "*.h" )
