add_subdirectory(hyperneat)
if(WITH_NN2)
add_subdirectory(neuroEvolution)
add_subdirectory(nslc)
add_subdirectory(nsgc)
add_subdirectory(nipes)
add_subdirectory(bayesopt)
add_subdirectory(reevaluate_fixedmorphology)
endif()
add_subdirectory(lc_nsms)
install(DIRECTORY common DESTINATION include FILES_MATCHING PATTERN "*.hpp" PATTERN "*.h" )
